get service line attribute values
